<resources>
	<string name="app_name">Clickkart</string>
	<string name="api_key">AIzaSyAxTAVRXDEFHpssxkCnqBfmk6uqGC7CcUs</string>
	<string name="browser_api_key">AIzaSyDKXs0zMHkdqAoOkpChognVXipkjRxVZfM</string>
	<string name="action_menu">Menu</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_search">Search</string>
	<string name="action_settings">Settings</string>
	<string name="action_share">Share</string>
	<string name="action_edit_account">Edit Account</string>
	<string name="action_sign_out">Sign Out</string>
	<string name="and"> and </string>
	<string name="comma">, </string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="btn_accept">Accept</string>
	<string name="btn_accounts">Accounts</string>
	<string name="btn_add">Add</string>
	<string name="btn_add_new_post">Add New Post</string>
	<string name="btn_add_relation">Add Relation</string>
	<string name="btn_add_sticker">Add Sticker</string>
	<string name="btn_add_topic">Add Topic</string>
	<string name="btn_any">Any</string>
	<string name="btn_audio">Audio</string>
	<string name="btn_block_user">Block User</string>
	<string name="btn_camera">Camera</string>
	<string name="btn_can_t_login">Can\'t login?</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_clear">Clear</string>
	<string name="btn_close">Close</string>
	<string name="btn_comments">Comments</string>
	<string name="btn_contact">Contact</string>
	<string name="btn_continue">Continue</string>
	<string name="btn_create_event">Create Event</string>
	<string name="btn_create_poll">Create Poll</string>
	<string name="btn_delete">Delete</string>
	<string name="btn_dismiss">Dismiss</string>
	<string name="btn_document">Document</string>
	<string name="btn_event">Event</string>
	<string name="btn_forgot_password">Forgot Password?</string>
	<string name="btn_gallery">Gallery</string>
	<string name="btn_groups">Groups</string>
	<string name="btn_home">Home</string>
	<string name="btn_location">Location</string>
	<string name="btn_log_in">Login</string>
	<string name="btn_login_here">Login Here</string>
	<string name="btn_logout">Logout</string>
	<string name="btn_merge">Merge</string>
	<string name="btn_name">Name</string>
	<string name="btn_next">Next</string>
	<string name="btn_no">No</string>
	<string name="btn_ok">OK</string>
	<string name="btn_open">Open</string>
	<string name="btn_open_gallery">Open Gallery</string>
	<string name="walkthrough_first_title">Easy Purchase &amp; Fast Delivery..</string>
	<string name="walkthrough_first_description">Hazzle free Shopping experience and pick your time for fast delivery.</string>
	<string name="walkthrough_second_title">Cash Back &amp; Exciting Offers..</string>
	<string name="walkthrough_second_description"> Unlock exciting cashback offers and discounts for every purchase.</string>
	<string name="btn_open_settings">Open Settings</string>
	<string name="btn_photo">Photo</string>
	<string name="btn_poll">Poll</string>
	<string name="btn_ratings">Ratings</string>
	<string name="btn_refresh">Refresh</string>
	<string name="btn_register">Register</string>
	<string name="btn_reject">Reject</string>
	<string name="btn_remove">Remove</string>
	<string name="btn_report_abuse">Report Abuse</string>
	<string name="btn_resend">Resend</string>
	<string name="btn_resend_verification_code">Resend Verification Code</string>
	<string name="btn_reset">Reset</string>
	<string name="btn_restore">Restore</string>
	<string name="btn_retain">Retain</string>
	<string name="btn_retake">Retake</string>
	<string name="btn_retry">Retry</string>
	<string name="btn_save">Save</string>
	<string name="btn_search">Search</string>
	<string name="btn_select">Select</string>
	<string name="btn_select_country">Select Country</string>
	<string name="btn_select_district">Select District</string>
	<string name="btn_select_location">Select Location</string>
	<string name="btn_select_state">Select State</string>
	<string name="btn_send_verification_code">Send Verification Code</string>
	<string name="btn_settings">Settings</string>
	<string name="btn_share_post">Share Post</string>
	<string name="btn_sign_in">Sign In</string>
	<string name="btn_sign_out">Sign Out</string>
	<string name="btn_signup">Signup</string>
	<string name="btn_skip">Skip</string>
	<string name="btn_sticker">Sticker</string>
	<string name="btn_submit">Submit</string>
	<string name="btn_take_a_photo">Take A Photo</string>
	<string name="btn_take_image">Take Image</string>
	<string name="btn_take_photo">Take Photo</string>
	<string name="btn_take_video">Take Video</string>
	<string name="btn_time">Time</string>
	<string name="btn_upload">Upload</string>
	<string name="btn_verify">Verify</string>
	<string name="btn_video">Video</string>
	<string name="btn_view_more_comments">View more comments</string>
	<string name="btn_yes">Yes</string>
	<string name="hint_address_1">Address 1</string>
	<string name="hint_city">City</string>
	<string name="hint_company_name">Company Name</string>
	<string name="hint_confirm_password">Confrim Password</string>
	<string name="hint_country">Country</string>
	<string name="hint_date_numerical">dd/mm/yyyy</string>
	<string name="hint_designation">Designation</string>
	<string name="hint_email">Email</string>
	<string name="hint_email_address"><i>name@example.com</i></string>
	<string name="hint_enter_your_number">Enter Your Phone Number</string>
	<string name="hint_fax">Fax</string>
	<string name="hint_first_name">First Name</string>
	<string name="hint_full_name">Full name</string>
	<string name="hint_group_name">Group Name</string>
	<string name="hint_last_name">Last Name</string>
	<string name="hint_mobile">Mobile</string>
	<string name="hint_mobile_number">Mobile number</string>
	<string name="hint_name">Name</string>
	<string name="hint_name_of_school_or_university">Name of School / University</string>
	<string name="hint_new_password">New Password</string>
	<string name="hint_old_password">Old Password</string>
	<string name="hint_otp">OTP Code</string>
	<string name="hint_password"><i>Password</i></string>
	<string name="hint_phone_number">Phone</string>
	<string name="hint_postal_code">Postal Code</string>
	<string name="hint_question">Question</string>
	<string name="hint_region_or_state">Region/State</string>
	<string name="hint_search">Search…</string>
	<string name="hint_select_place">Select Place</string>
	<string name="hint_state">State</string>
	<string name="hint_title">Title</string>
	<string name="hint_type_here">Type here</string>
	<string name="hint_type_something">Type Something…</string>
	<string name="hint_username">Username</string>
	<string name="hint_verification_code">Verification Code</string>
	<string name="hint_website">Website</string>
	<string name="hint_zip_code">Zip Code</string>
	<string name="internal_storage">Internal Storage</string>
	<string name="label_1_min_ago">1 min ago</string>
	<string name="label_about">About</string>
	<string name="label_add_an_option">Add an option</string>
	<string name="label_add_more">Add More</string>
	<string name="label_add_more_options">Add more options</string>
	<string name="label_added_by_member">ADDED BY MEMBER</string>
	<string name="label_added_by_sub_admin">ADDED BY SUB ADMIN</string>
	<string name="label_added_from_outside">ADDED FROM OUTSIDE</string>
	<string name="label_added_memebers">Added Memebers</string>
	<string name="label_address">Address</string>
	<string name="label_admin">Admin</string>
	<string name="label_already_have_an_account">Already have an Account?</string>
	<string name="label_approved">Approved</string>
	<string name="label_are_you_new_to_dearest">Are you new to Dearest?</string>
	<string name="label_backup_restore_message">\'Backing up\' means making a copy of your most important files. This can then be used if the original copy is used. Preferably the second copy should be held at a different location to the original and be kept in a secure environment.</string>
	<string name="label_biography">Biography</string>
	<string name="label_birth_place">Birth Place</string>
	<string name="label_buried_place">Buried Place</string>
	<string name="label_button_add">Add</string>
	<string name="label_button_edit">Edit</string>
	<string name="label_by">by</string>
	<string name="label_call">Call</string>
	<string name="label_cancelled">Cancelled</string>
	<string name="label_cause_of_death">Cause of Death</string>
	<string name="label_change_number">Change Number</string>
	<string name="label_change_password">Change Password</string>
	<string name="label_company">Company</string>
	<string name="label_contact_number">Contact Number</string>
	<string name="label_contacts">Contacts</string>
	<string name="label_country">Country</string>
	<string name="label_create_department">Create Department</string>
	<string name="label_create_group">Create</string>
	<string name="label_currently_studying_here">Currently Studying Here</string>
	<string name="label_currently_working_here">Currently Working Here</string>
	<string name="label_date_of_birth">Date Of Birth</string>
	<string name="label_daughter">Daughter</string>
	<string name="label_death_date">Death Date</string>
	<string name="label_death_place">Death Place</string>
	<string name="label_deceased">Deceased</string>
	<string name="label_deleted_by_sub_admin">DELETED BY SUB ADMIN</string>
	<string name="label_description">Description</string>
	<string name="label_designation">Designation</string>
	<string name="label_distance">Distance</string>
	<string name="label_documents">Documents</string>
	<string name="label_driver">Driver</string>
	<string name="label_duration">Duration</string>
	<string name="label_edited_by_sub_admin">EDITED BY SUB ADMIN</string>
	<string name="label_education_details">Education Details</string>
	<string name="label_education_place">Education Place</string>
	<string name="label_email">Email</string>
	<string name="menu_chat">Chat</string>
	<string name="menu_home">Home</string>
	<string name="menu_notifications">Notifications</string>
	<string name="menu_profile">Profile</string>
	<string name="menu_trees">Trees</string>
	<string name="action_restricted_profiles">Restricted Profiles</string>
	<string name="action_edit_profile">Edit Profile</string>
	<string name="action_set_privacy">Set Privacy</string>
	<string name="action_change_phone_number">Change Phone Number</string>
	<string name="action_change_password">Change Password</string>
	<string name="apple">Apple</string>
	<string name="green_park_sweets_fruits">Green Park (Sweets Fruits)</string>
	<string name="shop">Shop:</string>
	<string name="offer">OFFER</string>
	<string name="confirm">Confirm</string>
	<string name="successfully_edited">Successfully Edited</string>
	<string name="this_address_will_be_saved_in_your_delivery_address_list">This Address will be saved in your</string>
	<string name="are_you_sure">Are You Sure ?</string>
	<string name="do_you_want_delete_your_card_permanently">Do you want Delete Your Card Permanently.</string>
	<string name="your_wallet_balance_is">Your Wallet Balance is</string>
	<string name="wallet">Wallet</string>
	<string name="inr_250_00">INR 250.00</string>
	<string name="add_money">Add Money</string>
	<string name="this_amount_will_be_credited_to_your_wallet">This Amount will be Credited </string>
	<string name="credited_to_your_wallet">to Your Wallet </string>
	<string name="one_fifty">150.00</string>
	<string name="payment_failed">Payment Failed</string>
	<string name="something_wrong_please_check_your_network">Something Wrong! Please check your Network</string>
	<string name="connection_or_given_bank_details">Connection or given Bank Details.</string>
	<string name="home">Home</string>
	<string name="go_to_cart">Go To Cart</string>
	<string name="removed_successfully">Removed Successfully</string>
	<string name="address_removed_from_addresslist">Address removed from AddressList</string>
</resources>