<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	tools:context=".activity.PaymentFailedActivity">
	<LinearLayout
		android:gravity="center"
		android:layout_gravity="center"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<ImageView
			android:src="@drawable/payment_failed_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<com.techware.clickkart.widgets.CustomTextView
			android:layout_marginTop="@dimen/_10sdp"
			android:textStyle="bold"
			android:textAppearance="@style/TextAppearance.AppCompat.Large"
			android:textColor="@color/profile_text_color"
			android:gravity="center"
			android:text="@string/payment_failed"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<com.techware.clickkart.widgets.CustomTextView
			android:layout_marginLeft="@dimen/_10sdp"
			android:layout_marginRight="@dimen/_10sdp"
			android:gravity="center"
			android:text="@string/something_wrong_please_check_your_network"
			android:textColor="@color/profile_text_color"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<com.techware.clickkart.widgets.CustomTextView
			android:layout_marginLeft="@dimen/_10sdp"
			android:layout_marginRight="@dimen/_10sdp"
			android:gravity="center"
			android:text="@string/connection_or_given_bank_details"
			android:textColor="@color/profile_text_color"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout
		android:layout_gravity="bottom"
		android:paddingBottom="@dimen/_20sdp"
		android:layout_marginLeft="@dimen/_15sdp"
		android:layout_marginRight="@dimen/_15sdp"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<com.techware.clickkart.widgets.CustomTextView
			android:id="@+id/btn_cart_keepShopping"
			android:gravity="center"
			android:layout_marginRight="@dimen/_10sdp"
			android:textStyle="bold"
			android:textColor="@color/keepshoping"
			android:textAppearance="@style/TextAppearance.AppCompat.Small"
			android:layout_weight=".5"
			android:background="@drawable/clickkart_color_rounded"
			android:text="@string/home"
			android:layout_width="match_parent"
			android:layout_height="@dimen/_30sdp" />
		<com.techware.clickkart.widgets.CustomTextView
			android:id="@+id/btn_cart_checkout"
			android:gravity="center"
			android:textColor="@color/white"
			android:textAppearance="@style/TextAppearance.AppCompat.Small"
			android:layout_weight=".5"
			android:layout_marginLeft="@dimen/_10sdp"
			android:background="@drawable/button_gradient"
			android:text="@string/go_to_cart"
			android:textStyle="bold"
			android:layout_width="match_parent"
			android:layout_height="@dimen/_30sdp" />
	</LinearLayout>
</FrameLayout>