<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<com.techware.clickkart.widgets.CustomTextView
		android:ellipsize="end"
		android:maxLines="1"
		android:textStyle="bold"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"
		android:layout_marginLeft="@dimen/_30sdp"
		android:textColor="@color/walkthrough_black"
		android:text="@string/apple"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<com.techware.clickkart.widgets.CustomTextView
			android:textColor="@color/walkthrough_black"
			android:textStyle="bold"
			android:layout_marginLeft="@dimen/_30sdp"
			android:layout_weight=".3"
			android:textAppearance="@style/TextAppearance.AppCompat.Small"
			android:text="@string/shop"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		<com.techware.clickkart.widgets.CustomTextView
			android:textColor="@color/walkthrough_black"
			android:layout_weight=".2"
			android:minLines="1"
			android:ellipsize="end"
			android:textAppearance="@style/TextAppearance.AppCompat.Small"
			android:text="@string/green_park_sweets_fruits"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		<com.techware.clickkart.widgets.CustomTextView
			android:textColor="@color/walkthrough_black"
			android:layout_weight=".3"
			android:textAppearance="@style/TextAppearance.AppCompat.Small"
			android:text="@string/offer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		
		
	</LinearLayout>
	<LinearLayout
		android:paddingLeft="@dimen/_30sdp"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<com.techware.clickkart.widgets.CustomTextView
			android:textColor="@color/walkthrough_black"
			android:text="Rs:"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<com.techware.clickkart.widgets.CustomTextView
			android:paddingLeft="@dimen/_3sdp"
			android:textColor="@color/walkthrough_black"
			android:text="28"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<com.techware.clickkart.widgets.CustomTextView
			android:textColor="@color/walkthrough_black"
			android:text=" /kg"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		
	</LinearLayout>
	
	<View
		android:layout_marginTop="@dimen/_10sdp"
		android:background="#bbbbbb"
		android:layout_width="match_parent"
		android:layout_height="1dp"/>
</LinearLayout>
