<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginLeft="@dimen/_20sdp"
	android:layout_marginRight="@dimen/_20sdp"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	app:cardCornerRadius="@dimen/_10sdp"
	app:cardBackgroundColor="@color/white">
	<LinearLayout
		android:layout_gravity="bottom"
		android:gravity="bottom"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<com.techware.clickkart.widgets.CustomTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="@dimen/_20sdp"
			android:text="@string/are_you_sure"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			android:textColor="@color/added_successfully"
			android:textStyle="bold" />
		<com.techware.clickkart.widgets.CustomTextView
			android:layout_marginTop="@dimen/_10sdp"
			android:layout_marginLeft="@dimen/_30sdp"
			android:layout_marginRight="@dimen/_30sdp"
			android:textColor="@color/cabbage_color"
			android:text="@string/do_you_want_delete_your_card_permanently"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	
		<com.techware.clickkart.widgets.CustomTextView
			android:layout_gravity=""
			android:layout_marginTop="@dimen/_20sdp"
			android:textColor="@color/white"
			android:layout_marginLeft="@dimen/_80sdp"
			android:layout_marginRight="@dimen/_80sdp"
			android:background="@drawable/button_gradient"
			android:gravity="center"
			android:layout_marginBottom="@dimen/_20sdp"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			android:text="@string/confirm"
			android:layout_width="match_parent"
			android:layout_height="@dimen/_25sdp"/>
	</LinearLayout>
</androidx.cardview.widget.CardView>
