<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="bottom"
	android:layout_marginStart="@dimen/_25sdp"
	android:layout_marginEnd="@dimen/_25sdp"
	android:layout_marginBottom="@dimen/_65sdp"
	android:layout_marginLeft="@dimen/_20sdp"
	android:layout_marginRight="@dimen/_20sdp"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	app:cardCornerRadius="@dimen/_10sdp"
	app:cardBackgroundColor="@color/white">
	<LinearLayout
		android:layout_gravity="bottom"
		android:gravity="bottom"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<!--<ImageView
			android:id="@+id/address_dialog_cancel"
			android:layout_gravity="end"
			android:scaleType="centerInside"
			android:src="@drawable/dialog_cancel_icon"
			android:layout_width="@dimen/_20sdp"
			android:layout_height="@dimen/_20sdp"/>-->
		<com.techware.clickkart.widgets.CustomTextView
			android:layout_marginTop="@dimen/_10sdp"
			android:layout_gravity="center"
			android:textStyle="bold"
			android:text="@string/removed_successfully"
			android:textColor="@color/added_successfully"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<com.techware.clickkart.widgets.CustomTextView
			android:layout_marginTop="@dimen/_10sdp"
		android:gravity="center"
			android:textColor="@color/cabbage_color"
			android:text="@string/address_removed_from_addresslist"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	
		<com.techware.clickkart.widgets.CustomTextView
			android:id="@+id/txt_ok"
			android:paddingLeft="@dimen/_20sdp"
			android:paddingRight="@dimen/_20sdp"
			android:layout_gravity="center"
			android:layout_marginTop="@dimen/_15sdp"
			android:textColor="@color/white"
			android:background="@drawable/button_gradient"
			android:gravity="center"
			android:layout_marginBottom="@dimen/_20sdp"
			android:textAppearance="@style/TextAppearance.AppCompat.Small"
			android:text="@string/btn_ok"
			android:layout_width="wrap_content"
			android:layout_height="@dimen/_25sdp"/>
	</LinearLayout>
</androidx.cardview.widget.CardView>
