<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginLeft="@dimen/_20sdp"
	android:layout_marginRight="@dimen/_20sdp"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	app:cardCornerRadius="@dimen/_10sdp"
	app:cardBackgroundColor="@color/white">
	<LinearLayout
		android:layout_gravity="bottom"
		android:gravity="bottom"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<com.techware.clickkart.widgets.CustomTextView
			android:layout_marginTop="@dimen/_20sdp"
			android:layout_gravity="center"
			android:text="Enter the Amount"
			android:textColor="@color/cabbage_color"
			android:textAppearance="@style/TextAppearance.AppCompat.Small"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		
		<com.techware.clickkart.widgets.CustomTextView
			android:gravity="center"
			android:textSize="@dimen/_12ssp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/this_amount_will_be_credited_to_your_wallet"
			android:textColor="@color/total_amount_color" />
		<com.techware.clickkart.widgets.CustomTextView
			android:gravity="center"
			android:textSize="@dimen/_12ssp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/credited_to_your_wallet"
			android:textColor="@color/total_amount_color" />
		<com.techware.clickkart.widgets.CustomEditText
			android:textAppearance="@style/TextAppearance.AppCompat.Large"
			android:gravity="center"
			android:background="@android:color/transparent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/one_fifty"
			android:textColor="@color/fifty_color" />
		<com.techware.clickkart.widgets.CustomTextView
			android:layout_gravity=""
			android:layout_marginTop="@dimen/_20sdp"
			android:textColor="@color/white"
			android:layout_marginLeft="@dimen/_65sdp"
			android:layout_marginRight="@dimen/_65sdp"
			android:background="@drawable/button_gradient"
			android:gravity="center"
			android:layout_marginBottom="@dimen/_20sdp"
		android:textSize="@dimen/_12ssp"
			android:text="Add Money"
			android:layout_width="match_parent"
			android:layout_height="@dimen/_25sdp"/>
	</LinearLayout>
</androidx.cardview.widget.CardView>
